--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.username=postgres
 spring.datasource.password=talikdnt123
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
