--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
 			<version>3.8.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
