--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.application.name=apipostgres
 spring.jpa.database=postgresql
 spring.datasource.url=jdbc:postgresql://localhost:5432/course_api
 spring.datasource.username=postgres
-spring.datasource.password=talikdnt123
+spring.datasource.password=
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
+
+spring.security.oauth2.client.registration.google.client-id= 
+spring.security.oauth2.client.registration.google.client-secret= 
