--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=apipostgres
 spring.jpa.database=postgresql
 spring.datasource.url=jdbc:postgresql://localhost:5432/course_api
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=talikdnt123
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
-spring.security.oauth2.client.registration.google.client-id= 
-spring.security.oauth2.client.registration.google.client-secret= 
+spring.security.oauth2.client.registration.google.client-id= 999705707003-sov5niou6iallchhoom8l1k73gkkvm7r.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret= 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
