--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,10 @@
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
