--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
+spring.security.oauth2.client.registration.google.client-id= 
+spring.security.oauth2.client.registration.google.client-secret= 
 
